<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- Login Fragment -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.oceanx.freshcart.presentation.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.oceanx.freshcart.presentation.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <!-- Cart Fragment -->
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.oceanx.freshcart.presentation.cart.CartFragment"
        android:label="@string/nav_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
        <action
            android:id="@+id/action_cartFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <!-- Checkout Fragment -->
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.oceanx.freshcart.presentation.checkout.CheckoutFragment"
        android:label="@string/checkout_title"
        tools:layout="@layout/fragment_checkout">
        <action
            android:id="@+id/action_checkoutFragment_to_orderSuccessFragment"
            app:destination="@id/orderSuccessFragment"
            app:popUpTo="@id/cartFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Order Success Fragment -->
    <fragment
        android:id="@+id/orderSuccessFragment"
        android:name="com.oceanx.freshcart.presentation.ordersuccess.OrderSuccessFragment"
        android:label="@string/order_success_title"
        tools:layout="@layout/fragment_order_success">
        <argument
            android:name="orderId"
            app:argType="string" />
        <argument
            android:name="totalAmount"
            app:argType="float" />
        <argument
            android:name="deliveryAddress"
            app:argType="string" />
        <argument
            android:name="paymentMethod"
            app:argType="string" />
        <action
            android:id="@+id/action_orderSuccessFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>

